syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;


enum AutoKlasse {
    Standard = 0;
    Mittelklasse = 1;
    Luxusklasse = 2;
}

message AutoRequest {
    int32 id = 1;
}

message AutoDto {
    int32 Id = 1;
    string Marke = 2;
    int32 Tagestarif = 3;
    bytes RowVersion = 4;
    AutoKlasse AutoKlasse = 5;
    int32 Basistarif = 6;
}

message AutoAllDto {
    repeated AutoDto cars = 1;
}

service AutoService {

    rpc Insert(AutoDto)
    returns (AutoDto);

    rpc Update(AutoDto)
    returns (google.protobuf.Empty);

    rpc Delete(AutoDto)
    returns (google.protobuf.Empty);

    rpc GetAll(google.protobuf.Empty)
    returns (AutoAllDto);

    rpc Get(AutoRequest)
    returns (AutoDto);
}
