syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

message KundeDto {
    int32 Id = 1;
    string Vorname = 2;
    string Nachname = 3;
    google.protobuf.Timestamp Geburtsdatum = 4;
    bytes RowVersion = 5;
}

message KundeRequest {
   int32 id = 1;
}

message KundeAllDto {
    repeated KundeDto clients = 1;
}

service KundeService {

    rpc Insert (KundeDto)
    returns (KundeDto);

    rpc Update (KundeDto)
    returns(google.protobuf.Empty);

    rpc Delete (KundeDto)
    returns (google.protobuf.Empty);

    rpc GetAll(google.protobuf.Empty)
    returns (KundeAllDto);

    rpc Get (KundeRequest)
    returns (KundeDto);
}